--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -523,33 +523,14 @@
 </div>
 <br>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="{% static 'images/a.png' %}" alt="First slide">
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/b.png' %}" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/c.png' %}" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/d.png' %}" alt="Fourth slide">
-        </div>
-        <div class="carousel-item">
-            <img src="{% static 'images/e.png' %}" alt="Fifth slide">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span aria-hidden="true">&lt;</span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span aria-hidden="true">&gt;</span>
-        <span class="sr-only">Next</span>
-    </a>
+<div class="owl-carousel">
+    <div class="item"><img src="{% static 'images/a.png' %}" alt="Slide 1"></div>
+    <div class="item"><img src="{% static 'images/b.png' %}" alt="Slide 2"></div>
+    <div class="item"><img src="{% static 'images/c.png' %}" alt="Slide 3"></div>
+    <div class="item"><img src="{% static 'images/d.png' %}" alt="Slide 4"></div>
+    <div class="item"><img src="{% static 'images/e.png' %}" alt="Slide 5"></div>
 </div>
+
 
 
 
@@ -570,10 +551,39 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
 <script src="{% static 'js/chat-modal.js' %}"></script>
 <script src="{% static 'js/donate-bar.js' %}"></script>
 <script src="{% static 'js/donate-carousel.js' %}"></script>
 <script src="{% static 'js/donate-slideshow.js' %}"></script>
 <script src="{% static 'js/donate-scroll.js' %}"></script>
+
+<script>
+    $(document).ready(function(){
+        $('.owl-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            dots: false, // if you want to remove the dots
+            autoplay: true,
+            autoplayTimeout: 3000, // 3 seconds
+            autoplayHoverPause: true,
+            responsive:{
+                0:{
+                    items: 1
+                },
+                600:{
+                    items: 2
+                },
+                1000:{
+                    items: 3 // You can change this to show more items on larger screens
+                }
+            }
+        });
+    });
+</script>
+
 
 {% endblock extra_js %}
