--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -285,6 +285,12 @@
     transform: scale(1.0); /* Scale up the center item */
 }
 
+.owl-prev-arrow, .owl-next-arrow {
+    font-size: 60px; /* Increase the size of < and > */
+    line-height: 1; /* Adjust line-height to align properly */
+    color: white; /* Arrow color */
+}
+
 
 
     .progress-container {
@@ -613,8 +619,8 @@
             margin: 10,
             nav: true,
             dots: false,
-            center: true,  // Enable center mode
-            autoplay: false, // Disable auto-rotation
+            autoplay: false,
+            navText: ['<span class="owl-prev-arrow">&lt;</span>', '<span class="owl-next-arrow">&gt;</span>'], // Add custom HTML for arrows
             responsive:{
                 0:{
                     items: 1
@@ -628,6 +634,7 @@
             }
         });
     });
+
 
 </script>
 
