--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -814,7 +814,7 @@
                     </div>
 
                     <div>
-                        <a href="#chatModal" class="chat-button">Chat</a>
+                        <a href="#chatModal" class="chat-button">Chats</a>
                     </div>  
                     <a href="https://buy.stripe.com/5kAdT5gHl7ve4WA000" class="support-button" target="_blank">Donate</a>
                 </div>
