--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -272,6 +272,65 @@
         outline: none;
     }
 
+    .success-stories-carousel {
+    background-color: white; /* White background for the slides */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.success-stories-carousel .item {
+    background-color: white;
+    padding: 20px;
+    font-family: 'Lora', serif;
+    font-size: 18px;
+    color: #333;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.owl-nav button {
+    background-color: #AA336A; /* Pink color for the buttons */
+    color: #fff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    transition: background-color 0.3s ease; /* Add smooth transition */
+}
+
+.owl-nav button:hover {
+    background-color: #cf6094; /* Darker pink on hover */
+}
+
+.owl-carousel .item p {
+    font-family: 'Lora', serif;
+    font-size: 18px;
+    color: #333;
+}
+
+.owl-carousel .owl-nav {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.owl-carousel .owl-nav button.owl-prev {
+    left: -20px;
+}
+
+.owl-carousel .owl-nav button.owl-next {
+    right: -20px;
+}
+
+
     @media (max-width: 1024px) {
 
         .donation-container {
@@ -322,21 +381,21 @@
         </div>
 
         <h2>Success Stories</h2>
-        <div class="success-stories-container">
-            <button class="prev">&#10094;</button>
-            <div class="success-stories-slideshow">
-                <div class="slides-container">
-                    <div class="slide">"What I like about IVOC is how kids are allowed to participate and create music freely. It is also a space where you can be yourself and where you will never be judged."
-                    </div>
-                    <div class="slide">"One thing I learned about myself during IVOC is that I am who I am and I don't have to try to please anybody else by being someone that I'm not."
-                    </div>
-                    <div class="slide">"Something I learned about myself is how to work with others. For example, how to help a friend when he didn't know how to add on to the beat for the first time in the studio"
-                    </div>
-                    <div class="slide">"The thing I like about IVOC is how the whole thing is just expressing yourself with music and words. It feels like a safe place where you aren't judged"
-                    </div>
-                </div>
+        <div class="owl-carousel owl-theme success-stories-carousel">
+            <div class="item">
+                <p>"What I like about IVOC is how kids are allowed to participate and create music freely. It is also a space where you can be yourself and where you will never be judged."</p>
             </div>
-            <button class="next">&#10095;</button>
+            <div class="item">
+                <p>"One thing I learned about myself during IVOC is that I am who I am and I don't have to try to please anybody else by being someone that I'm not."</p>
+            </div>
+            <div class="item">
+                <p>"Something I learned about myself is how to work with others. For example, how to help a friend when he didn't know how to add on to the beat for the first time in the studio"</p>
+            </div>
+            <div class="item">
+                <p>"The thing I like about IVOC is how the whole thing is just expressing yourself with music and words. It feels like a safe place where you aren't judged"</p>
+            </div>
+        </div>
+
         </div>
 
         <h2>Your Donation Makes a Difference</h2>
@@ -401,6 +460,18 @@
                     items: 3
                 }
             }
+        });
+    });
+
+    $(document).ready(function(){
+        $('.success-stories-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            dots: false,
+            items: 1, // Show one testimonial at a time
+            navText: ["&#10094;", "&#10095;"], // Custom left and right arrows
+            autoplay: false,
         });
     });
 
