--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1008,6 +1008,10 @@ body, p {
     .owl-carousel {
         margin-bottom: 60px; /* Space below the carousel for the buttons */
     }
+
+    .carousel-wrapper {
+        padding: 30px 0;  /* Reduce top and bottom padding */
+    }
 }
 
 @media (max-width: 480px) {
