--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -420,14 +420,12 @@ body, p {
     font-size: 18px; 
 }
 
-.owl-nav button.owl-prev, .owl-nav button.owl-next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #f1d1e8; 
-    color: #AA336A; 
+.owl-nav button.owl-prev, 
+.owl-nav button.owl-next {
+    background-color: white; /* Set the arrow background to white */
+    color: #AA336A; /* This is assuming the arrow icons are controlled by the 'color' property */
     border: none;
-    border-radius: 50%; 
+    border-radius: 50%;
     font-size: 20px;
     line-height: 50px;
     height: 50px;
@@ -445,8 +443,9 @@ body, p {
     right: -60px;
 }
 
-.owl-nav button:hover {
-    background-color: #cf6094;
+.owl-nav button.owl-prev:hover, 
+.owl-nav button.owl-next:hover {
+    background-color: #FADADD; 
 }
 
 @media (max-width: 1024px) {
@@ -1001,16 +1000,16 @@ body, p {
     }
 
     .owl-nav {
-        text-align: center;  /* Center the buttons below the carousel */
+        text-align: center;
+        font-size: 16px; 
     }
 
-    /* Adjust the container for the slides to allow some space for the buttons below */
     .owl-carousel {
-        margin-bottom: 60px; /* Space below the carousel for the buttons */
+        margin-bottom: 60px; 
     }
 
     .carousel-wrapper {
-        padding: 30px 0;  /* Reduce top and bottom padding */
+        padding: 30px 0;  
     }
 }
 
