--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -424,7 +424,7 @@ body, p {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #f1d1e8; 
+    background-color: #ffffff; 
     color: #AA336A; 
     border: none;
     border-radius: 50%; 
@@ -447,7 +447,7 @@ body, p {
 
 .owl-nav button.owl-prev:hover, 
 .owl-nav button.owl-next:hover {
-    background-color: #FADADD; /* Light pink background on hover */
+    background-color: #cf6094; /* Light pink background on hover */
 }
 
 @media (max-width: 1024px) {
